# opencv_with_c-plus-plus

./: CMakeLists.txt  README.md
Libraries/install/lib/: libopencv_calib3d.4.12.0.dylib  libopencv_calib3d.412.dylib  libopencv_calib3d.dylib  libopencv_core.4.12.0.dylib  libopencv_core.412.dylib  libopencv_core.dylib  libopencv_dnn.412.dylib  libopencv_dnn.dylib  libopencv_features2d.4.12.0.dylib  libopencv_features2d.412.dylib  libopencv_features2d.dylib  libopencv_flann.4.12.0.dylib  libopencv_flann.412.dylib  libopencv_flann.dylib  libopencv_gapi.412.dylib  libopencv_gapi.dylib  libopencv_highgui.4.12.0.dylib  libopencv_highgui.412.dylib  libopencv_highgui.dylib  libopencv_imgcodecs.4.12.0.dylib  libopencv_imgcodecs.412.dylib  libopencv_imgcodecs.dylib  libopencv_imgproc.4.12.0.dylib  libopencv_imgproc.412.dylib  libopencv_imgproc.dylib  libopencv_ml.4.12.0.dylib  libopencv_ml.412.dylib  libopencv_ml.dylib  libopencv_objdetect.4.12.0.dylib  libopencv_objdetect.412.dylib  libopencv_objdetect.dylib  libopencv_photo.4.12.0.dylib  libopencv_photo.412.dylib  libopencv_photo.dylib  libopencv_stitching.4.12.0.dylib  libopencv_stitching.412.dylib  libopencv_stitching.dylib  libopencv_video.4.12.0.dylib  libopencv_video.412.dylib  libopencv_video.dylib  (+3 more)
Libraries/install/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
src/: main.cpp
